--- a/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
@@ -414,7 +414,7 @@ Unter <a href="https://developer.paypal.com/docs/integration/admin/manage-apps/"
 <li>Klicken Sie auf den Namen der Anwendung und tragen Sie <b>Client-ID</b> und <b>Secret</b> weiter unten auf dieser Seite ein. Speichern.</li>
 <li>Optional: Klicken Sie unten bei <b>Experience Profil-ID</b> auf <b>Hinzufügen</b>, um ein Profil zu erstellen. Ihre Shop-Daten (Name, Logo etc.) werden Käufern dadurch beim Bezahlen auf den PayPal-Seiten angezeigt.</li>
 <li>Optional: Klicken Sie unten bei <b>Webhook-ID</b> auf <b>Hinzufügen</b>, um einen Webhook zu erstellen. Über einen Webhook empfängt der Shop PayPal-Mitteilungen und aktualisiert u.U. den Zahlungsstatus Ihrer Aufträge.</li>
-</ol></p>]]>
+</ol><p>Um Bilder zu weiteren Zahlarten festzulegen sind im Content-Ordner des betreffenden Plugins Dateien mit folgendem Namensmuster zu hinterlegen: <b>branding.&lt;Plugin-Systemname|Provider-Systemname&gt;.&lt;jpg|jpeg|png|gif&gt;</b><br />Für Vorkasse lautet der Pfad z.B. <b>\Plugins\SmartStore.OfflinePayment\Content\branding.Payments.Prepayment.jpg</b>. Wichtig: Der Shop muss hierfür SSL unterstützen.</p></p>]]>
         </Value>
       </LocaleResource>
       <LocaleResource Name="MethodUnavailable">
