--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
@@ -32,6 +32,9 @@ Textvorschläge:<ul>
   <LocaleResource Name="MissingAddressConsentToken">
     <Value>Es wurde keine Adress-Token durch Amazon übermittelt!</Value>
   </LocaleResource>
+  <LocaleResource Name="IncompleteProfileDetails">
+    <Value>Unvollständige Amazon Profildaten!</Value>
+  </LocaleResource>
 	<LocaleResource Name="PaymentMethodNotActive">
 		<Value>Die Zahlungsart "Login und Bezahlen mit Amazon" ist für Shop "{0}" nicht verfügbar.</Value>
 	</LocaleResource>
@@ -93,18 +96,30 @@ Textvorschläge:<ul>
 	<LocaleResource Name="Marketplace.Uk">
 		<Value>Großbritannien</Value>
 	</LocaleResource>
-	<LocaleResource Name="AccessKey">
+  <LocaleResource Name="AccessKey">
+    <Value>Ihre Access Key ID</Value>
+  </LocaleResource>
+  <LocaleResource Name="AccessKey.Hint">
+    <Value>Die Access Key ID finden Sie bei Amazon's Seller Central unter Integration - MWS Access Key.</Value>
+  </LocaleResource>
+  <LocaleResource Name="SecretKey">
+    <Value>Ihr Secret Access Key</Value>
+  </LocaleResource>
+  <LocaleResource Name="SecretKey.Hint">
+    <Value>Den Secret Access Key finden Sie bei Amazon's Seller Central unter Integration - MWS Access Key.</Value>
+  </LocaleResource>
+	<LocaleResource Name="ClientId">
 		<Value>Ihre Client-ID</Value>
 	</LocaleResource>
-	<LocaleResource Name="AccessKey.Hint">
-		<Value>Die Client-ID finden Sie bei Amazon's Seller Central unter Login mit Amazon - Einstellungen.</Value>
+	<LocaleResource Name="ClientId.Hint">
+		<Value>Die Client-ID finden Sie bei Amazon's Seller Central unter Integration - MWS Access Key.</Value>
 	</LocaleResource>
-	<LocaleResource Name="SecretKey">
+	<!--<LocaleResource Name="ClientSecret">
 		<Value>Ihr Client-Secret</Value>
 	</LocaleResource>
-	<LocaleResource Name="SecretKey.Hint">
-		<Value>Den Client-Secret finden Sie bei Amazon's Seller Central unter Login mit Amazon - Einstellungen.</Value>
-	</LocaleResource>
+	<LocaleResource Name="ClientSecret.Hint">
+		<Value>Den Client-Secret finden Sie bei Amazon's Seller Central unter Integration - MWS Access Key.</Value>
+	</LocaleResource>-->
   <LocaleResource Name="PayButtonType">
     <Value>Art des Zahlungs-Button</Value>
   </LocaleResource>
