--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
@@ -9,13 +9,16 @@
 	<LocaleResource Name="AdminInstruction">
 		<Value>
 			<![CDATA[<p>Register now at <a href="https://payments.amazon.de/preregistration/lpa?ld=SPEXDEAPA-SmartStore.Net-CP-DP">Amazon Payments</a>.</p>
-<p>How to set up "Login and Pay with Amazon":</p><ul>
-<li>Enter your Amazon credentials in the fields provided below. You can find these credentials in your <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> account.</li>
+<p>How to set up <b>Login and Pay with Amazon</b>:</p><ul>
+<li>Enter your Amazon credentials in the fields provided below or click <a href="javascript:void(0)" class="register-now">Get credentials now</a>.
+<ul>
+<li>You can find these credentials in your <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> account.</li>
 <li>You can find the Merchant ID in Seller Central at <b>Settings > Integration Settings</b>.</li>
 <li>You can find both access keys in Seller Central at <b>Integration > MWS Access Key</b>.</li>
+</ul></li>
 <li>If you would like to receive instant payment notifications (SSL required!) enter the IPN URL listed bewlow under <b>Settings > Integration Settings > Instant Notification Settings > Merchant URL</b>.</li>
 </ul>
-<p>Please add information about "Login and Pay with Amazon" on your payment page (see <b>CMS > Topics</b>). You will find picture material <a href="https://payments.amazon.de/resources#marks">here</a>.
+<p>Please add information about <b>Login and Pay with Amazon</b> on your payment page (see <b>CMS > Topics</b>). You will find picture material <a href="https://payments.amazon.de/resources#marks">here</a>.
 Text suggestions:<ul>
 <li>Option 1: Login and Pay with Amazon: Pay now with the payment and shipping information from your Amazon account.</li>
 <li>Option 2: Already Amazon customer? Pay now with the payment and shipping information from your Amazon account.</li>
@@ -63,6 +66,9 @@ Text suggestions:<ul>
   </LocaleResource>
   <LocaleResource Name="AsyncPaymentAuthrizationNote">
     <Value>Your transaction with Amazon Pay is currently being validated. Please be aware that we will inform you shortly as needed.</Value>
+  </LocaleResource>
+  <LocaleResource Name="RegisterNow">
+    <Value>Get credentials now</Value>
   </LocaleResource>
 
   <LocaleResource Name="ConfigGroups">
